# 3D_object_viewer

./: CMakeLists.txt
include/glad/: glad.h
include/self/: Shader.h  error.h
lib/: Shader.cpp  error.cpp  glad.c  stb_image.cpp
res/shaders/: shader.frag  shader.vert
src/: Camera.h  Main.cpp  Shader.cpp  error.cpp
